--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 /* 轮播图 */
 .kv-swiper{
 	width:100%;
-	height: 500px;
+	height: 960px;
 	position:relative;
 }
 .kv-swiper:before{
@@ -18,12 +18,18 @@
 	z-index:2;
 }
 /*		主体部分*/
+section{
+	background:url("../img/bg-1.jpg");
+}
 	 .main-top{
 		width:1200px;
-		margin:0 auto;
+		margin:-180px auto 50px;
 		border:2px solid #dcdcdc;
 		padding:20px;
 		border-radius:20px;
+		 position: relative;
+		 background: #f8fef9;
+		z-index: 9999999999999999999;
 	 }
 /* 右边tab部分*/
 	 .mt-right{
@@ -31,12 +37,12 @@
 		width:353px;
 		margin:28px 0 0 20px;
 	 }
-	 .tab-hd{
+	.mt-right .tab-hd{
 		padding-bottom:2px;
 		border-bottom:1px solid #afc3e0;
 		font-size:0;
 	 }
-	 .tab-hd>li{
+.mt-right .tab-hd>li{
 		display:inline-block;
 		width:75px;
 		font-size:12px;
@@ -44,14 +50,14 @@
 
 		
 	 }
-	 .tab-hd>li>a{
+.mt-right .tab-hd>li>a{
 		color:#afc3e0;
 		font-size:18px;
 		font-weight:bold;
 		padding-left:5px;
 		border-left:4px solid transparent;
 	 }
-	.tab-hd>li>a:hover{
+.mt-right .tab-hd>li>a:hover{
 		border-left:4px solid #78b5fb;
 	}
 	.col-news>li{
@@ -116,6 +122,22 @@
 		color:#6c6c6c;
 		margin-top:7px;
 	}
+	.mt-app-btn,.mt-apk-btn{
+		display: block;
+		width:154px;
+		height:65px;
+		margin-left:-5px;
+	}
+.mt-app-btn{
+	background-position:-520px 0;
+	margin-top: 15px;
+}
+.mt-apk-btn{
+	background-position:-690px 0;
+	margin-top: 8px;
+}
+	/*主体中间部分*/
+
 	.mt-center{
 		width:620px;
 		height:320px;
@@ -124,6 +146,72 @@
 		border-radius:20px;
 		margin-left:20px;
 		border:1px solid #ccc;
+		position: relative;
+	}
+	.adPic{
+		position: absolute;
+		width:100%;
+		height:100%;
+		left:0;
+		top:0;
+	}
+	.adPic a{
+		display: block;
+		width:100%;
+		height:100%;
+		overflow: hidden;
+		position: absolute;
+		left:0;
+		top:0;
+		background: #0e97dc;
+	}
+	.adPic img{
+		width:100%;
+		height:100%;
+		position:absolute;
+		top:0;
+		left:0;
+	}
+	.adBtn{
+		position: absolute;
+		bottom:0;
+		left:0;
+		right:0;
+		height:50px;
+		background-color:#666;
+		background:rgba(4,0,0,.46);
+	}
+	.adBtn>a{
+		display: inline-block;
+		height:100%;
+		width:40px;
+		position: relative;
+		overflow: hidden;
+		padding-right: 40px;
+		box-sizing: border-box;;
+		text-indent: -9999px;
+		font-size: 18px;
+		color:#fff;
+		line-height: 50px;
+	}
+.adBtn>a:before{
+	content: "";
+	display: block;
+	position: absolute;
+	right:0;
+	top:50%;
+	margin-top: -20px;
+	width:40px;
+	height:40px;
+	background: url("../img/spr.png") no-repeat;
+	background-position: -390px -100px;
+}
+.adBtn>a.on:before{
+	background-position: -350px -100px;
+}
+	.adBtn>a.on{
+		width:540px;
+		text-indent: 30px;
 	}
 	.other-entry{
 		font-size:0;
@@ -326,6 +414,333 @@
 		margin-right:-70px;
 		background-position:-610px -670px;
 	}
+	/*活动中心*/
+	.part2{
+		background-image: url(../img/bg-2.jpg) ;
+		height:981px;
+		overflow: hidden;
+	}
+	.part2-inner{
+		width:1200px;
+		margin:180px auto 0;
+		position: relative;
+	}
+	.p2-tit{
+		width:599px;
+		height: 207px;
+		background-position:0 -290px;
+		float: left;
+	}
+	.act-list li{
+		border-radius:20px;
+		width:450px;
+		height:250px;
+		float: right;
+		margin-top:50px;
+		position:relative;
+		overflow: hidden;
+	}
+.act-list li.act-0{
+	width:720px;
+	height:420px;
+	float: left;
+}
+	.act-list li img{
+		width:100%;
+		height:100%;
+		transition: all .3s;
+	}
+.act-list li:hover img {
+	transform: scale(1.02);
+}
+	.href-mask{
+			display:block;
+		width:100%;
+		height:100%;
+		position:absolute;
+		left:0;
+		top:0;
+		font-size:0;
+	}
+	.act-list li.act-1{
+		margin-top:-230px;
+	}
+	.act-list li.act-2{
+		margin-top:30px;
+	}
+	.act-more-btn{
+		position:absolute;
+		bottom: 57px;
+		right: 130px;
+		width:190px;
+		height:52px;
+		box-sizing: border-box;
+		border: 3px solid #a7751e;
+		line-height: 48px;
+		text-align: center;
+		font-size: 24px;
+		border-radius:20px;
+		color:#a7751e;
+		text-indent: -40px;
+	}
+.act-more-btn:before{
+	content:"";
+	display:block;
+	width:33px;
+	height:25px;
+	background:url(../img/spr.png) no-repeat;
+	background-position:-690px -530px;
+	position:absolute;
+	top:50%;
+	right:22px;
+	margin-top:-12.5px;
+	transition:all .3s;
+}
+.act-more-btn:hover:before{
+	transform:translateX(5px);
+}
+/*视频中心*/
+.part3{
+		background-image: url("../img/bg-3.jpg");
+
+	height: 961px;
+}
+.part3-inner{
+	width:1200px;
+	margin:0 auto;
+	position: relative;
+}
+.p3-tit{
+	width:552px;
+	height:222px;
+	background-position: 0 -510px;
+	float: right;
+}
+.video-tab{
+	clear:both;
+	font-size:0;
+	padding-top: 38px;
+	text-align: left;
+}
+.video-tab .tab-prev,.video-tab .tab-next{
+		display: inline-block;
+	width:46px;
+	height:34px;
+}
+.video-tab a{
+	vertical-align: middle;
+}
+.video-tab .tab-prev{
+	background-position: -610px -590px;
+}
+.video-tab .tab-next{
+	background-position: -610px -629px;
+}
+.video-tab .tab-hd{
+	display: inline-block;
+	font-size: 0;
+}
+.video-tab .tab-item{
+	display: inline-block;
+	position: relative;
+	padding-left: 90px;
+	padding-right: 30px;
+	font-size: 12px;
+}
+.video-tab .tab-item:first-child {
+	padding-left: 30px;
+}
+.video-tab .tab-item:before {
+	content: "";
+	display: block;
+	width: 60px;
+	height: 5px;
+	background-color: #a7751e;
+	border-radius: 3px;
+	position: absolute;
+	left: 0;
+	top: 50%;
+	margin-top: -2.5px;
+	opacity: 0.5;
+}
+.video-tab .tab-item:first-child:before {
+	display: none;
+}
+
+.video-tab .tab-item a{
+	display: block;
+	width:96px;
+	height:27px;
+	overflow: visible;
+	opacity: 0.5;
+}
+.video-tab .tab-item a:hover{
+	opacity: 1;
+}
+.video-tab .tab-item .zxsp{
+	background-position: -520px -100px;
+}
+.video-tab .tab-item .gfsp{
+	background-position: -520px -70px;
+}
+.video-tab .tab-item .gxsp{
+	background-position: -630px -70px;
+}
+.video-tab .tab-item .jczb{
+	background-position: -630px -100px;
+}
+.video-list-wrap{
+	margin-top:24px;
+}
+.video-list{
+	position: relative;
+	display: none;
+}
+.video-list.dis{
+	display: block;
+}
+.video-list>li{
+	border-radius:20px;
+	position: absolute;
+	overflow: hidden;
+	display: block;
+	width:280px;
+	height: 173px;
+	display: block;
+}
+.video-list>li.video-0{
+	width:580px;
+	height:360px;
+	margin:0 auto;
+	position: relative;
+}
+.video-list li img{
+	width:100%;
+	height:100%;
+}
+.video-list li  .play-mask{
+	width:100%;
+	height:100%;
+	position:absolute;
+	left:0;
+	top:0;
+	background:rgba(4,0,0,.4);
+	transition: all .3s;
+}
+.video-list li  .play-mask:before{
+	content: "";
+	display: block;
+	background: url('../img/spr.png') no-repeat;
+	background-position: -690px -450px;
+	position: absolute;
+	left:50%;
+	top:45%;
+	width:46px;
+	height:51px;
+	margin: -25px 0 0 -23px;
+	transition: all .3s;
+}
+.video-list li:first-child .play-mask:before {
+	width: 94px;
+	height: 103px;
+	background-position: -610px -290px;
+	margin: -51px 0 0 -47px;
+}
+.video-list li .play-mask:hover {
+	background: transparent;
+}
+.video-list li .play-mask:hover:before {
+	opacity: 0;
+	-webkit-transform: scale(2);
+	transform: scale(2);
+}
+.video-tit{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	font-size: 14px;
+	line-height: 30px;
+	padding:0 24px 0 42px;
+	background:rgba(255,255,255,.7);
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	color:#4a5c73;
+}
+.video-list li:first-child .video-tit{
+	padding-left: 66px;
+	line-height: 60px;
+	font-size: 18px;
+}
+.video-tit:before{
+	content:"";
+	display: block;
+	width:13px;
+	height: 15px;
+	background: url("../img/spr.png") no-repeat;
+	background-position: -800px -130px;
+	position: absolute;
+	left:26px;
+	top:50%;
+	margin-top:-7px;
+}
+.video-list li:first-child .video-tit:before{
+	left: 37px;
+	width:15px;
+	height:17px;
+	margin-top:-8px;
+	background-position: -800px -100px;
+}
+.video-list>li.video-1 {
+	top: 0;
+	left: 0;
+}
+.video-more-btn{
+	float: right;
+	margin-top:50px;
+	margin-right:45px;
+	position:relative;
+	display: block;
+	width:190px;
+	height:52px;
+	box-sizing: border-box;
+	border: 3px solid #a7751e;
+	line-height: 48px;
+	text-align: center;
+	font-size: 24px;
+	border-radius: 20px;
+	color:#a7751e;
+	text-indent: -40px;
+}
+.video-more-btn:before{
+	content:"";
+	display:block;
+	width:33px;
+	height:25px;
+	background: url("../img/spr.png") no-repeat;
+	background-position:-690px -530px;
+	position:absolute;
+	top:50%;
+	right:22px;
+	margin-top:-12.5px;
+	transition:all .3s;
+}
+.video-more-btn:hover:before{
+	transform:translateX(5px);
+}
+.video-list>li.video-2 {
+	top: 187px;
+	left: 0;
+}
+.video-list>li.video-3 {
+	top: 0;
+	right: 0;
+}
+.video-list>li.video-4 {
+	 top: 187px;
+	 right: 0;
+ }
 /* 攻略中心*/
 	.part4{
 		background-image:url(../img/bg-4.jpg);
@@ -382,25 +797,7 @@
 		margin:42px auto 0px;
 		border-radius:20px;
 	}
-	.s-spr{
-		background-image:url(../img/s-spr.png);
-		background-repeat:no-repeat;
-	}
-	.spr{
-		background-image:url(../img/spr.png);
-		background-repeat:no-repeat;
-	}
-	.text-hide{
-			text-indent:-9999px;
-			overflow:hidden;
-	}
-	.clearfix:after{
-		content:'';
-		display:block;
-		height:0px;
-		clear:both;
-		overflow:hidden;
-	}
+
 	.strategy-con{
 		margin-left:130px;
 		height:100%;
@@ -420,3 +817,58 @@
 	.strategy-con .col-news a:before, .strategy-con .col-news li:first-child a:before {
     background-position: -480px -100px;
 	}
+.strategy-more-btn{
+	float: right;
+	margin-top:10px;
+	margin-right:90px;
+	position:relative;
+	display: block;
+	width:120px;
+	box-sizing:border-box;
+	border:1px solid #a2a2a2;
+	line-height: 30px;
+	text-align: center;
+	font-size: 16px;
+	border-radius:10px;
+	color:#a2a2a2;
+	text-indent:-30px;
+}
+.strategy-more-btn:before{
+	content:"";
+	display:block;
+	width:22px;
+	height:11px;
+	background:url('../img/spr.png') no-repeat;
+	background-position:-690px -600px;
+	position:absolute;
+	top:50%;
+	right:12px;
+	margin-top:-5.5px;
+	transition:all .3s;
+}
+.strategy-more-btn:hover:before{
+	transform:translateX(5px);
+}
+.part5{
+	background-image:url(img/bg-5.jpg);
+	height:981px;
+	position: relative; 
+}
+.p5-tit{
+	width:900px;
+	height:92px;
+	background-position:0 -800px;
+	margin: 0 auto;
+}
+.ts-wrap{
+	width:920px;
+	height:710px;
+	margin:50px auto 0;
+	overflow: hidden;
+}
+.ts-swiper{
+	padding:30px 0;
+	width:1200px;
+	height:100%;
+	margin-left: -140px;
+}
