--- a/public/css/com.css
+++ b/public/css/com.css
@@ -93,6 +93,15 @@ a{
 			font-size:12px;
 			color:#b2b8be;
 		}
+		.h-book-btn{
+			display: inline-block;
+			width: 150px;
+			height: 48px;
+			background-position: 0 -100px;
+			vertical-align: top;
+			margin-top:26px;
+			margin-left:40px;
+		}
 /*页面的背景*/
 .inner-kv{
 	height:536px;
@@ -181,4 +190,25 @@ a{
 }
 .contact-buluo span.spr{
 	background-position:-150px -1060px;
+}
+/*最后部分*/
+.foot-list{
+	width:1200px;
+	margin:140px auto 0;
+	color:#525561;
+}
+.list-cont{
+	display: inline-block;
+	margin:48px auto 0;
+	width:100%;
+	text-align: center;
+}
+.list-item a{
+	line-height: 20px;
+	font-size: 12px;
+	color: #525561;
+}
+.foot-h{
+	font-size: 12px;
+	text-align: center;
 }
