--- a/public/css/com.css
+++ b/public/css/com.css
@@ -44,8 +44,11 @@ a{
 	background-repeat:no-repeat;
 }
 /* 导航栏的logo*/
+ nav{
+	 text-align: center;
+ }
 		.nav-logo{
-			float:left;
+			display: inline-block;
 			width:142px;
 			height:84px;
 			margin-top:8px;
@@ -64,7 +67,6 @@ a{
 			margin-left:50px;
 			vertical-align: top;
 			font-size:0;
-			padding-left:100px;
 		}
 		.nav-list>li{
 			float:left;
