--- a/public/css/index.css
+++ b/public/css/index.css
@@ -109,6 +109,9 @@ section {
     padding-right: 20px;
     padding-left: 24px;
     color: #3eabff;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .col-news>li a:before {
